--- a/styleguide/stylesheets/sfumato.css
+++ b/styleguide/stylesheets/sfumato.css
@@ -3318,12 +3318,20 @@ input[type=button] span + i, input[type=submit] span + i, input[type=cancel] spa
  *  </div>
  */
 [sf-block] > [sf-block-lr-wrapper] {
+  --zero-elastic-width: 1440px;
+  --phab-elastic-width: var(--zero-elastic-width);
+  --tabp-elastic-width: var(--phab-elastic-width);
+  --tabl-elastic-width: var(--tabp-elastic-width);
+  --note-elastic-width: var(--tabl-elastic-width);
+  --desk-elastic-width: var(--note-elastic-width);
+  --elas-elastic-width: var(--desk-elastic-width);
+  --elastic-width: var(--zero-elastic-width);
   --block-lr-padding: var(--sf-zero-block-lr-padding);
   margin-left: auto;
   margin-right: auto;
   padding-left: var(--block-lr-padding);
   padding-right: var(--block-lr-padding);
-  max-width: var(--elas-breakpoint);
+  max-width: var(--elastic-width);
 }
 @media screen and (min-width: 400px) {
   [sf-block] > [sf-block-lr-wrapper] {
