--- a/styleguide/stylesheets/sfumato.css
+++ b/styleguide/stylesheets/sfumato.css
@@ -1111,7 +1111,7 @@ span#sfumato-version[role=status]::after {
   --sf-desk-auto-rows: var(--sf-note-auto-rows);
   --sf-elas-auto-rows: var(--sf-desk-auto-rows);
   --sf-grid-auto-rows: var(--sf-zero-auto-rows);
-  --sf-align-items: initial;
+  --sf-align-items: normal;
   --sf-zero-align-items: var(--sf-align-items);
   --sf-phab-align-items: var(--sf-zero-align-items);
   --sf-tabp-align-items: var(--sf-phab-align-items);
@@ -1120,7 +1120,7 @@ span#sfumato-version[role=status]::after {
   --sf-desk-align-items: var(--sf-note-align-items);
   --sf-elas-align-items: var(--sf-desk-align-items);
   --sf-grid-align-items: var(--sf-zero-align-items);
-  --sf-vertical-align-items: initial;
+  --sf-vertical-align-items: normal;
   --sf-zero-vertical-align-items: var(--sf-vertical-align-items);
   --sf-phab-vertical-align-items: var(--sf-zero-vertical-align-items);
   --sf-tabp-vertical-align-items: var(--sf-phab-vertical-align-items);
