More style tweaks for previous

--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -72,7 +72,7 @@
         }
     }
 
-    [sf-metric], [sf-label], [sf-textbox], [sf-listbox], [sf-filebox], [sf-radios], [sf-checkboxes] {
+    [sf-metric], [sf-label], [sf-textbox], [sf-listbox], [sf-filebox], [sf-radios], [sf-checkboxes], [sf-checkbox] {
 
         label {
 
